[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/screens/pause_screen.gd" type="Script" id=3]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/spacer.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/scaffolder/src/gui/control_row_list/control_row_list.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_button.tscn" type="PackedScene" id=10]

[node name="PauseScreen" type="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 768.0
rect_min_size = Vector2( 1024, 768 )
script = ExtResource( 3 )
screen_name = "pause"
nav_bar_text = "Paused"
is_settings_button_shown = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabeledControlList" parent="VBoxContainer" instance=ExtResource( 9 )]
margin_right = 1024.0
font_size = "S"
row_height = 36.0

[node name="Spacer" parent="VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 4.0
margin_right = 512.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 20 )
size = Vector2( 0, 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 448.0
margin_top = 28.0
margin_right = 576.0
margin_bottom = 188.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 16

[node name="ResumeButton" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 10 )]
margin_right = 128.0
margin_bottom = 88.0
rect_min_size = Vector2( 128, 88 )
texture_key = "play_normal"
texture_scale = Vector2( 2, 2 )
size_override = Vector2( 128, 88 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 128.0
margin_bottom = 160.0
custom_constants/separation = 16

[node name="ExitLevelButton" parent="VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 10 )]
margin_right = 56.0
rect_min_size = Vector2( 56, 56 )
texture_key = "stop_normal"
texture_scale = Vector2( 2, 2 )
size_override = Vector2( 56, 56 )

[node name="RestartButton" parent="VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 10 )]
margin_left = 72.0
margin_right = 128.0
rect_min_size = Vector2( 56, 56 )
texture_key = "retry_normal"
texture_scale = Vector2( 2, 2 )
size_override = Vector2( 56, 56 )

[node name="Spacer2" parent="VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 192.0
margin_right = 512.0
margin_bottom = 232.0
rect_min_size = Vector2( 0, 40 )
size = Vector2( 0, 40 )

[connection signal="pressed" from="VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/ExitLevelButton" to="." method="_on_ExitLevelButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
